[package]
name = "anniv"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

actix-web = { version = "4.0.0-beta.4" }
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "any", "mysql", "postgres", "sqlite"] }

uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
google-authenticator = "0.2.0"
bcrypt = "0.9.0"

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
thiserror = "1.0"
