[package]
name = "anniv"
version = "0.1.0"
authors = ["Yesterday17 <t@yesterday17.cn>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "any", "mysql", "postgres", "sqlite"] }

uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
google-authenticator = "0.2.0"
bcrypt = "0.9.0"

tokio = { version = "1", features = ["full"] }
async-graphql = "3.0"
poem = { version = "1.3.6" }
async-graphql-poem = "3.0"

log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
thiserror = "1.0"

anni-repo = { path = "../anni/anni-repo", features = ["db", "arc"] }
